# QtPT

./: .clang-format  .gitignore  README.md  question.md
Cmake/: CompilerSettings.cmake  FindAllSourceFiles.cmake
Conan/: conanprofile.txt
Fuzz/: requirements.txt  tasks.py  user_input_history.py
Fuzz/conan/: __init__.py
Fuzz/conan_task/: __init__.py
Fuzz/message_queue/: __init__.py
Fuzz/user_input_history/: __init__.py
MessageQueue/: CMakeLists.txt  conanfile.txt
MessageQueue/conan/: conanfile.txt  conanprofile.txt
MessageQueue/include/MessageQueue/: AmqpQueueHandler.hpp  AmqpQueueManager.hpp  SimpleStringQueueManager.hpp
MessageQueue/src/: AmqpQueueHandler.cpp  AmqpQueueManager.cpp  AmqpQueueManager.hpp  SimpleStringQueueManager.cpp
MessageQueue/tests/unit/: SimpleStringQueueManager_Tests.cpp  simple-test.cpp
UserInputHistory/: CMakeLists.txt  conanfile.txt
UserInputHistory/conan/: conanfile.txt  conanprofile.txt
UserInputHistory/qml/: main.qml
UserInputHistory/src/: UserHistoryModel.cpp  UserHistoryModel.hpp  main.cpp
WiKi/: dev-start.md  rabbitmq.md
